[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
itertools = "0.12.0"
anyhow = "1.0.75"
matches = { version = "0.1.10", features = [] }
once_cell = "1.19.0"
num = "0.4.1"